--- a/css/myresume.css
+++ b/css/myresume.css
@@ -167,7 +167,7 @@ section.resume-section .resume-item .resume-date {
 }
 
 a {
-  color:#6EFF0E;
+  color: black;
 }
 
 a:hover, a:focus, a:active {
