--- a/css/resume.css
+++ b/css/resume.css
@@ -21,12 +21,12 @@ h1 .text-primary {
 }
 
 .bg-primary {
-	background-color: #6EFF0E!important;
+	background-color: #A9A9A9!important;
 	background-image: url("img/otis-redding.png");
 }
 
 .text-primary {
-	color: #6EFF0E!important;
+	color: #A9A9A9!important;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -34,19 +34,19 @@ h1 .text-primary {
 }
 
 a {
-	color: #6EFF0E;
+	color: #A9A9A9;
 }
 
 a:active, a:focus, a:hover {
-	color: #6EFF0E;
+	color: #A9A9A9;
 }
 
 .social-icons a:hover {
-	background-color: #6EFF0E;
+	background-color: #A9A9A9;
 }
 
 .dev-icons .list-inline-item i:hover {
-    color: #6EFF0E;
+    color: #A9A9A9;
 }
 
 .graph_set {
@@ -64,7 +64,7 @@ a:active, a:focus, a:hover {
 
 .timeline::after {
   content: '';
-  background-color: #6EFF0E;
+  background-color: #A9A9A9;
   position: absolute;
   width: 6px;
   top: 0;
@@ -88,7 +88,7 @@ a:active, a:focus, a:hover {
   height: 25px;
   right: -12px;
   background-color: white;
-  border: 4px solid #6EFF0E;
+  border: 4px solid #A9A9A9;
   top: 15px;
   border-radius: 50%;
   z-index: 1;
