--- a/css/resume.css
+++ b/css/resume.css
@@ -22,7 +22,7 @@ h1 .text-primary {
 
 .bg-primary {
 	background-color: #A9A9A9!important;
-	background-image:  url("css/2cardboard-flat.jpg");
+	background-image:  url("css/brushed-alum.png");
 }
 
 .text-primary {
