--- a/css/resume.css
+++ b/css/resume.css
@@ -22,7 +22,7 @@ h1 .text-primary {
 
 .bg-primary {
 	background-color: #A9A9A9!important;
-	background-image:  url("brushed-alum.png");
+	background-image:  
 }
 
 .text-primary {
